Add initial Jitsi attempt to JS and HTML

--- a/root/usr/Gables/data/www/gables.htm
+++ b/root/usr/Gables/data/www/gables.htm
@@ -43,5 +43,6 @@
 		</div>
 		<div id="right" class="sidebar"></div>
 	</div>
+	<div id="meet"> <!-- Placeholder div for Jitsi --> </div>
 </body>
 </html>
