Actually load the Jitsi JS script

--- a/root/usr/Gables/data/www/gables.htm
+++ b/root/usr/Gables/data/www/gables.htm
@@ -22,6 +22,7 @@
 	<script type="text/javascript" src="profiles.js"></script>
 	<script type="text/javascript" src="md5.js"></script>
 	<script type="text/javascript" src="gables.js"></script>
+        <script type="text/javascript" src='https://meet.jit.si/external_api.js'></script>
 	<script type="text/javascript">
 		<!--
 		function initConnection() {
