Client changes for Jitsi

--- a/root/usr/Gables/data/www/gables.htm
+++ b/root/usr/Gables/data/www/gables.htm
@@ -22,7 +22,6 @@
 	<script type="text/javascript" src="profiles.js"></script>
 	<script type="text/javascript" src="md5.js"></script>
 	<script type="text/javascript" src="gables.js"></script>
-        <script type="text/javascript" src='https://meet.jit.si/external_api.js'></script>
 	<script type="text/javascript">
 		<!--
 		function initConnection() {
@@ -32,6 +31,9 @@
 	</script>
 </head>
 <body id="body">
+	<div class="top_row">
+		<div id="meet"></div>
+	</div>
 	<div id="mainclient">
 		<div id="left" class="sidebar"></div>
 		<div id="core">
@@ -44,6 +46,5 @@
 		</div>
 		<div id="right" class="sidebar"></div>
 	</div>
-	<div id="meet"> <!-- Placeholder div for Jitsi --> </div>
 </body>
 </html>
